# geo-environmental-analyzer

./: .gitattributes  .gitignore  AGENTS.md  GeoEnvironmentalAnalyzer.spec  LICENSE  README.md  build_windows_exe.ps1  implementation_tasks.md  plan.md  pyproject.toml  settings.toml
.github/workflows/: ci.yml
src/geo_environmental_analyzer/: gui.py  main.py
src/geo_environmental_analyzer/analyses/: groundwater.py  parcels.py  protected_areas.py  surface_water.py
src/geo_environmental_analyzer/application/: run_pipeline.py
src/geo_environmental_analyzer/domain/: models.py  protocols.py  services.py
src/geo_environmental_analyzer/infrastructure/: config.py
src/geo_environmental_analyzer/infrastructure/gateways/: eziudp_client.py  uldk_client.py
src/geo_environmental_analyzer/infrastructure/geodata/: jcwp_repository.py  jcwpd_repository.py  rdos_repository.py
src/geo_environmental_analyzer/infrastructure/input/: points_txt.py
src/geo_environmental_analyzer/infrastructure/reporting/: xlsx_writer.py
tests/: test_domain_services.py  test_infrastructure_adapters.py  test_pipeline_integration.py  test_points_txt.py  test_smoke.py
